# Django-Production-Skillbox

./: Dockerfile  README.md  pyproject.toml
mysite/mysite/: settings.py
